fix(waiting-users): button cropped
Add a padding in order to avoid ugly "onFocus"
Add an overflow property in order to avoid horizontal scrollbar

--- a/bigbluebutton-html5/imports/ui/components/waiting-users/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/waiting-users/styles.scss
@@ -87,6 +87,12 @@
   margin: .3rem 0;
   font-weight: 400;
   font-size: var(--font-size-base);
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.moderatorActions {
+  padding: 0 .2rem;
 }
 
 .mainTitle {
